k8s/base/booking-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: home-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/home-service/booking-service:IMAGE_TAG
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
