k8s/base/worker-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: home-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      containers:
        - name: worker-service
          image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/home-service/worker-service:IMAGE_TAG
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
