k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: home-service
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: home-service
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: home-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: home-service
spec:
  selector:
    app: worker-service
  ports:
    - port: 80
      targetPort: 3000
